# sega

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example_report_10M.html
backends/: cosmo_oracle.hpp  megahit_oracle.hpp
bench/: bench_main.cpp  megahit_bench.cpp  sdbg_report.cpp
include/sdbg_traverse/: bfs.hpp  choice_dictionary.hpp  dfs.hpp  nav_oracle.hpp
tests/: compile_cosmo_oracle.cpp  megahit_run.cpp  test_traversal.cpp
